Closed Bug 1233056 Opened 10 years ago Closed 10 years ago

Long tapping on a link will select a different link from the page

Categories

(Firefox for Android Graveyard :: General, defect)

45 Branch
ARM
Android
defect
Not set
normal

Tracking

(firefox45 verified, firefox46 verified, fennec45+)

VERIFIED FIXED
Firefox 46
Tracking Status
firefox45 --- verified
firefox46 --- verified
fennec 45+ ---

People

(Reporter: cos_flaviu, Assigned: rbarker)

References

Details

(Keywords: regression)

Attachments

(1 file, 5 obsolete files)

Environment: Device: (Android Asus Transformer Pad (Android 4.2.1); Build: Aurora 45.0a2 (2015-12-15); Steps to reproduce: 1. Go to http://people.mozilla.com/~nhirata/html_tp/listlinks.html 2. Long tap on a link. Expected result: The tapped link is highlighted and the context menu is triggered. Actual result: The long tap action is made on a different position on screen (different link is selected). Notes: This issue is intermittent.
I wonder if this could be related to the discussion in bug 1222234 comment 10. Flaviu, can you reproduce this on a wide range of devices, or just the one?
tracking-fennec: --- → ?
Flags: needinfo?(flaviu.cos)
Ran into similar behavior on Google search results using Nexus 4 (Android 5.0.1).
Flags: needinfo?(flaviu.cos)
This is on Aurora 45, so probably not APZ related. Kats, any ideas?
tracking-fennec: ? → 45+
Flags: needinfo?(bugmail.mozilla)
Not off the top of my head. It's probably an accidental regression from the APZ work but getting a window would be helpful.
Flags: needinfo?(bugmail.mozilla)
From bisecting mozilla-central with "ac_add_options --disable-android-apz": The first bad revision is: changeset: 276168:73246a388339 user: Botond Ballo <botond@mozilla.com> date: Fri Nov 27 21:39:07 2015 -0500 summary: Bug 1228597 - Remove the MOZ_SINGLE_PROCESS_APZ define. r=tn
Hmm, did that land before or after we enabled APZ for fennec?
It landed after we enabled APZ for fennec on nightly
Then shouldn't removing the ifdefs not change anything?
For the APZ-enabled case, yes. For the APZ-disabled case, there's a bunch of code (previously guarded by MOZ_SINGLE_PROCESS_APZ) that is now getting run. And that's causing a regression, when APZ is disabled.
Assignee: nobody → rbarker
Judging by that try, I missed something.
Attachment #8703917 - Flags: review?(tnikkel)
With APZ disabled as it is on Aurora: https://treeherder.mozilla.org/#/jobs?repo=try&revision=b0e4d20a853b With APZ enabled as it is on nightly: https://treeherder.mozilla.org/#/jobs?repo=try&revision=5cc6299394a9 While there is some orange, None of the failures looks to be related to this patch.
Comment on attachment 8703917 [details] [diff] [review] 0001-Bug-1233056-Long-tapping-on-a-link-will-select-a-different-link-from-the-page-16010417-04bfe9b.patch > void > nsDisplayResolution::HitTest(nsDisplayListBuilder* aBuilder, > const nsRect& aRect, > HitTestState* aState, > nsTArray<nsIFrame*> *aOutFrames) > { >+#if !defined(MOZ_WIDGET_ANDROID) || defined(MOZ_ANDROID_APZ) > nsIPresShell* presShell = mFrame->PresContext()->PresShell(); > nsRect rect = aRect.RemoveResolution(presShell->ScaleToResolution() ? presShell->GetResolution () : 1.0f); > mList.HitTest(aBuilder, rect, aState, aOutFrames); >+#else >+ mList.HitTest(aBuilder, aRect, aState, aOutFrames); >+#endif > } I think the |#if !defined(MOZ_WIDGET_ANDROID) || defined(MOZ_ANDROID_APZ)| code should be correct everywhere. Do you know if this hunk is needed? Can we land without this change?
Attachment #8703917 - Flags: review?(tnikkel) → review+
Comment on attachment 8705938 [details] [diff] [review] 0001-Bug-1233056-Long-tapping-on-a-link-will-select-a-different-link-from-the-page-r-tnikkel-16010820-8a839aa.patch Approval Request Comment [Feature/regressing bug #]: Bug 1233056 [User impact if declined]: Long tapping on a link will select the wrong link in Fennec [Describe test coverage new/current, TreeHerder]: Normal test coverage on try won't catch this because Aurora is still using the Java Pan Zoom controller (which is what was broken) while nightly is using the C++APZ which the patch does not affect. I did a try runs with both JPZ and C++APZ and did not find any failures related to this patch. [Risks and why]: Risk should be low since this patch is restoring fennec to how it used to work before the breakage. [String/UUID change made/needed]: None.
Attachment #8705938 - Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 46
Comment on attachment 8705938 [details] [diff] [review] 0001-Bug-1233056-Long-tapping-on-a-link-will-select-a-different-link-from-the-page-r-tnikkel-16010820-8a839aa.patch Fix a regression, early in the 45 cycle, taking it.
Attachment #8705938 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Confirmed that the link from c0 and my issues with Reddit are fixed in today's Aurora nightly :)
Status: RESOLVED → VERIFIED
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: