Bug 1233056 - Long tapping on a link will select a different link from the page. r=tnikkel, a=sylvestre

Long tapping would fail when Java Pan-Zoom was enabled in Fennec.